scrollbar fix

--- a/card.css
+++ b/card.css
@@ -63,6 +63,9 @@
 	}
 
 }
+.flip-card-back::-webkit-scrollbar-track {
+	background: rgba(0,0,0,0);
+}
 
 .badge {
 	background-color: #00000055;
