--- a/navbar.css
+++ b/navbar.css
@@ -73,6 +73,8 @@ body {
 	background: black;
 }
 
+*::-webkit-scrollbar-corner { background: rgba(0,0,0,0); }
+
 h1 {
 	font-size: 3rem;
 }
